--- a/Assignment 1/send_more_money/makefile
+++ b/Assignment 1/send_more_money/makefile
@@ -2,9 +2,6 @@ all: send-more-money
 clean: 
 	rm -rf out
 
-out/send-more-money.o:
+send-more-money:
 	mkdir out
-	clang++ -O3 -c send-more-money.cpp -o out/send-more-money.o
-
-send-more-money: out/send-more-money.o
 	clang++ -framework gecode -o out/send-more-money send-more-money.cpp
