modify donald into gist mode

--- a/Assignment 1/send_most_money/makefile
+++ b/Assignment 1/send_most_money/makefile
@@ -3,5 +3,5 @@ clean:
 	rm -rf out
 
 send-most-money:
-	mkdir out
-	clang++ -framework gecode -o out/send-most-money send-more-money-with-gist-inspection.cpp
+	mkdir -p out
+	clang++ -framework gecode -o out/send-most-money send-most-money.cpp
