--- a/Assignment 1/send_more_money/makefile
+++ b/Assignment 1/send_more_money/makefile
@@ -1,7 +1,14 @@
+UNAME := $(shell uname)
+ifeq ($(UNAME), Darwin)
+
 all: send-more-money
 clean: 
 	rm -rf out
 
 send-more-money:
 	mkdir out
-	clang++ -framework gecode -o out/send-more-money send-more-money.cpp
+	clang++ -framework gecode -o out/send-more-money send-more-money.cpp	
+
+else
+	# write your linux makefile here
+endif
