--- a/Assignment 1/send_most_money/makefile
+++ b/Assignment 1/send_most_money/makefile
@@ -1,3 +1,6 @@
+UNAME := $(shell uname)
+ifeq ($(UNAME), Darwin)
+
 all: send-most-money
 clean: 
 	rm -rf out
@@ -5,3 +8,7 @@ clean:
 send-most-money:
 	mkdir -p out
 	clang++ -framework gecode -o out/send-most-money send-most-money.cpp
+	
+else
+	# write your linux makefile here
+endif
