--- a/Assignment 1/sudoku/makefile
+++ b/Assignment 1/sudoku/makefile
@@ -1,3 +1,6 @@
+UNAME := $(shell uname)
+ifeq ($(UNAME), Darwin)
+
 all: sudoku
 clean: 
 	rm -rf out
@@ -5,3 +8,7 @@ clean:
 sudoku:
 	mkdir -p out
 	clang++ -framework gecode -o out/sudoku sudoku.cpp
+	
+else
+	# write your linux makefile here
+endif
