added `make run' to all makefiles

--- a/Assignment 1/Donald/makefile
+++ b/Assignment 1/Donald/makefile
@@ -8,6 +8,9 @@ clean:
 donald:
 	mkdir -p out
 	clang++ -framework gecode -o out/donald donald.cpp
+
+run:
+	out/donald
 	
 else
 	# write your linux makefile here
