--- a/Assignment 1/send_more_money/makefile
+++ b/Assignment 1/send_more_money/makefile
@@ -9,6 +9,9 @@ send-more-money:
 	mkdir out
 	clang++ -framework gecode -o out/send-more-money send-more-money.cpp	
 
+run:
+	out/send-more-money
+
 else
 	# write your linux makefile here
 endif
