--- a/Assignment 1/send_most_money/makefile
+++ b/Assignment 1/send_most_money/makefile
@@ -9,6 +9,9 @@ send-most-money:
 	mkdir -p out
 	clang++ -framework gecode -o out/send-most-money send-most-money.cpp
 	
+run:
+	out/send-most-money
+	
 else
 	# write your linux makefile here
 endif
