beat it beat it beat it

--- a/Assignment 1/n-queens-matrix/makefile
+++ b/Assignment 1/n-queens-matrix/makefile
@@ -7,7 +7,7 @@ clean:
 
 n-queens:
 	mkdir -p out
-	clang++ -framework gecode -o out/n-queens queens.cpp
+	clang++ -g -framework gecode -o out/n-queens queens.cpp
 
 run: all
 	out/n-queens
