added gist support in makefile in queens

--- a/Assignment 1/sudoku/makefile
+++ b/Assignment 1/sudoku/makefile
@@ -11,6 +11,10 @@ sudoku:
 	
 run:
 	out/sudoku
+
+gist:
+	mkdir -p out
+	clang++ -framework gecode -o out/sudoku-gist sudoku-gist.cpp
 	
 else
 	# write your linux makefile here
