--- a/Assignment 1/send_more_money/makefile
+++ b/Assignment 1/send_more_money/makefile
@@ -14,4 +14,16 @@ run:
 
 else
 	# write your linux makefile here
+all: send-more-money                                                            
+clean: 
+	rm -rf out
+	rm -f lib
+	 @echo ~~~Clean done~~~
+send-more-money:
+	ln -s /usr/local/lib lib
+	mkdir out
+	g++ send-more-money.cpp -o out/sendMoreMoney -L sendMoreMoney.o -lgecodesearch -lgecodeint -lgecodekernel -lgecodesupport -lgecodegist
+	@echo ~~~g++ ready~~~
+run:
+	out/sendMoreMoney
 endif
