--- a/Assignment 1/Donald/makefile
+++ b/Assignment 1/Donald/makefile
@@ -14,4 +14,16 @@ run:
 	
 else
 	# write your linux makefile here
+all: donald                                                            
+clean: 
+	rm -rf out
+	rm -f lib
+	 @echo ~~~Clean done~~~
+donald:
+	ln -s /usr/local/lib lib
+	mkdir out
+	g++ donald.cpp -o out/donald -L donald.o -lgecodesearch -lgecodeint -lgecodekernel -lgecodesupport -lgecodegist
+	@echo ~~~g++ ready~~~
+run:
+	out/donald
 endif
