--- a/Assignment 2/a22/makefile
+++ b/Assignment 2/a22/makefile
@@ -14,4 +14,16 @@ run:
 	
 else
 	# write your linux makefile here
+all: a22                                                            
+clean: 
+	rm -rf out
+	rm -f lib
+	 @echo ~~~Clean done~~~
+a22:
+	ln -s /usr/local/lib lib
+	mkdir out
+	g++ a22.cpp -o out/a22 -L a22.o -lgecodesearch -lgecodeint -lgecodekernel -lgecodesupport -lgecodegist -lgecodedriver -lgecodeminimodel
+	@echo ~~~g++ ready~~~
+run:
+	out/a22
 endif
